# Novaria

./: .gitignore  CMakeLists.txt
.github/workflows/: windows-ci.yml
config/: default.cfg  game.cfg  game.toml  override_template.cfg
docs/: README.md  build.md  day1-kickoff-checklist.md  mvp-plan.md  runtime-contracts.md
docs/adr/: ADR-0001-server-authoritative.md  ADR-0002-script-runtime-boundary.md  README.md  script-runtime-boundary.md  server-authoritative.md
docs/architecture/: README.md  input-and-debug-controls.md  module-contracts.md  resource-pipeline.md  runtime-contracts.md  simulation-pipeline.md  ui-system.md  wire-protocol.md
docs/engineering/: build-and-run.md  mod-compatibility-matrix.md  release-and-diagnostics.md  testing.md
docs/gameplay/: README.md  blueprint.md  data-dictionary.md  philosophy.md
docs/product/: mvp-definition.md  mvp-issues.md  mvp-milestones.md  mvp-status.md
docs/status/: overview.md  progress.md
include/novaria/app/: game_app.h  input_command_mapper.h  player_controller.h  player_controller_components.h  render_scene_builder.h
include/novaria/content/: pak.h
include/novaria/core/: base64.h  config.h  executable_path.h  sha256.h
include/novaria/mod/: mod_fingerprint.h  mod_loader.h
include/novaria/net/: net_service.h
include/novaria/platform/: input_actions.h  render_scene.h  sdl_context.h
include/novaria/runtime/: mod_fingerprint_policy.h  mod_pipeline.h  mod_script_loader.h  net_service_factory.h  runtime_paths.h  save_state_loader.h  script_host_factory.h  world_service_factory.h
include/novaria/save/: save_repository.h
include/novaria/script/: script_host.h  sim_rules_rpc.h  sim_rules_schema.h
include/novaria/sim/: command_schema.h  ecs_runtime.h  gameplay_balance.h  gameplay_ruleset.h  gameplay_types.h  player_motion.h  simulation_kernel.h  tick_context.h  tile_collision.h  typed_command.h
include/novaria/ui/: gameplay_ui.h
include/novaria/wire/: byte_io.h  envelope.h
include/novaria/world/: material_catalog.h  snapshot_codec.h  world_service.h
mods/_example_core/: mod.toml
mods/_example_core/content/: items.csv  npcs.csv  recipes.csv
mods/core/: mod.cfg
mods/core/content/: items.csv  npcs.csv  recipes.csv
mods/core/content/scripts/: core.lua
src/: main.cpp
src/app/: game_app.cpp  game_app.h  game_loop.cpp  game_loop.h  input_command_mapper.cpp  input_command_mapper.h  player_controller.cpp  player_controller.h  player_controller_components.cpp  render_scene_builder.cpp  render_scene_builder.h
src/content/: binary_io.h  pak.cpp
src/core/: base64.cpp  cfg_parser.cpp  cfg_parser.h  config.cpp  config.h  default_config_embedded.h.in  executable_path.cpp  logger.cpp  logger.h  sha256.cpp
src/mod/: mod_fingerprint.cpp  mod_loader.cpp  mod_loader.h
src/net/: net_service.h  net_service_runtime.cpp  net_service_runtime.h  net_service_stub.cpp  net_service_stub.h  net_service_udp_loopback.cpp  net_service_udp_loopback.h  net_service_udp_peer.cpp  net_service_udp_peer.h  udp_transport.cpp  udp_transport.h
src/platform/: input_actions.h  render_scene.h  sdl_context.cpp  sdl_context.h
src/runtime/: mod_fingerprint_policy.cpp  mod_pipeline.cpp  mod_script_loader.cpp  net_service_factory.cpp  runtime_paths.cpp  save_state_loader.cpp  script_host_factory.cpp  world_service_factory.cpp
src/save/: save_repository.cpp  save_repository.h
src/script/: bootstrap.lua  lua_bootstrap_script_embedded.h.in  lua_jit_script_host.cpp  lua_jit_script_host.h  script_host.h  script_host_runtime.cpp  script_host_runtime.h  script_host_stub.cpp  script_host_stub.h
src/sim/: command_schema.cpp  command_schema.h  ecs_runtime.cpp  ecs_runtime.h  gameplay_ruleset.cpp  player_motion.cpp  simulation_kernel.cpp  simulation_kernel.h  tick_context.h  tile_collision.cpp  typed_command.cpp  typed_command.h
src/ui/: gameplay_ui.cpp
src/wire/: byte_io.cpp  envelope.cpp
src/world/: material_catalog.cpp  snapshot_codec.cpp  snapshot_codec.h  world_service.h  world_service_basic.cpp  world_service_basic.h
tests/app/: player_controller_components_tests.cpp  render_scene_builder_tests.cpp
tests/core/: config_tests.cpp
tests/mod/: mod_loader_tests.cpp
tests/mvp/: gameplay_issue_e2e_tests.cpp  mvp_acceptance_tests.cpp
tests/net/: net_service_runtime_tests.cpp  net_service_stub_tests.cpp  net_service_udp_loopback_tests.cpp  net_service_udp_peer_tests.cpp  udp_transport_tests.cpp
tests/runtime/: mod_fingerprint_policy_tests.cpp  mod_script_loader_tests.cpp
tests/save/: save_repository_tests.cpp
tests/script/: script_host_runtime_tests.cpp  script_host_stub_tests.cpp
tests/sim/: ecs_runtime_tests.cpp  player_motion_tests.cpp  simulation_kernel_tests.cpp
tests/world/: world_replication_flow_tests.cpp  world_service_basic_tests.cpp  world_snapshot_codec_tests.cpp
tools/: content_main.cpp  net_smoke.cpp  net_soak.cpp  net_soak_fault_injection.ps1  net_soak_four_nodes.ps1  server_main.cpp  simrpc_codegen.cpp
tools/cmake/: dev_runtime.cfg.in
tools/release/: build_release.ps1
